fixed mdbook-tera location

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
           cd ../
           mkdir public
           cp index.html public/index.html
-          mv mdbook_tera/* tools/
+          mv ./mdbook_tera/bin/* tools/
           mdbook-tera --help
       - name: Build introduction
         run: |
