added mdbook-tera for template support
Updated README.md

Updated build.yml

--- a/tutorials/book.toml
+++ b/tutorials/book.toml
@@ -12,3 +12,6 @@ git-repository-url = "https://github.com/OurMachinery/themachinery-books"
 command = "mdbook-toc"
 renderer = ["html"]
 marker = "* auto-gen TOC;\n{:toc}"
+
+[preprocessor.tera]
+command = "mdbook-tera --toml ../context.toml"
