cp context.toml to correct path

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,8 @@ jobs:
         run: |
           export PATH="${{github.workspace}}/mdbook_tera/bin:$PATH"
           chmod +x ./mdbook_tera/bin/mdbook-tera
+          cp context.toml ./the_machinery_book/context.toml
+          cp context.toml ./tutorials/context.toml
       - name: Setup mdbook
         run: |
           mkdir tools
