updated content links
workaround  https://github.com/rust-lang/mdBook/issues/1186

specelized base_url per book for ease of use

added the_machinery_book and tutorials to context

added readme note

--- a/tutorials/book.toml
+++ b/tutorials/book.toml
@@ -14,6 +14,6 @@ renderer = ["html"]
 marker = "* auto-gen TOC;\n{:toc}"
 
 [preprocessor.tera]
-command = "mdbook-tera --toml ../context.toml"
+command = "mdbook-tera --toml ./context.toml"
 
 [output.linkcheck]
