--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,6 +60,7 @@ jobs:
           export PATH="${{github.workspace}}/mdbook_tera/bin:$PATH"
           export PATH="${{github.workspace}}/tools/:$PATH"
           cd the_machinery_book
+          sed -i "s/#//" book.toml
           mdbook build
           mv book/html ../public/the_machinery_book
       - name: Build introduction
@@ -67,6 +68,7 @@ jobs:
           export PATH="${{github.workspace}}/mdbook_tera/bin:$PATH"
           export PATH="${{github.workspace}}/tools/:$PATH"
           cd tutorials
+          sed -i "s/#//" book.toml
           mdbook build
           mv book/html ../public/tutorials
       - name: Deploy
