--- a/tutorials/book.toml
+++ b/tutorials/book.toml
@@ -17,8 +17,8 @@ marker = "* auto-gen TOC;\n{:toc}"
 command = "mdbook-tera --toml ./context.toml"
 
 [output.linkcheck]
-follow-web-links = true
-exclude = [ 'https://ourmachinery\.com/apidoc/' ]
+follow-web-links = false
+exclude = [ 'https://ourmachinery\.com/apidoc/','mailto:ping@ourmachinery\.com','https://marketplace\.visualstudio\.com'  ]
 
 
 #[preprocessor.autolink]
