--- a/tutorials/book.toml
+++ b/tutorials/book.toml
@@ -8,6 +8,9 @@ title = "The Machinery Tutorial Book"
 [output.html]
 git-repository-url = "https://github.com/OurMachinery/themachinery-books"
 
+[output.html.fold]
+enable = true
+
 [preprocessor.toc]
 command = "mdbook-toc"
 renderer = ["html"]
