added auto include of sample src code

--- a/the_machinery_book/book.toml
+++ b/the_machinery_book/book.toml
@@ -16,15 +16,24 @@ command = "mdbook-toc"
 renderer = ["html"]
 marker = "* auto-gen TOC;\n{:toc}"
 
-[preprocessor.tera]
-command = "mdbook-tera  --toml  ./context.toml"
-
-[output.linkcheck]
-follow-web-links = false
-exclude = [ 'https://ourmachinery\.com/apidoc/','mailto:ping@ourmachinery\.com','https://marketplace\.visualstudio\.com'  ]
+[preprocessor.links]
 
 #[preprocessor.autolink]
 #renderer = ["html"]
 #folder = "../"
 #books = ["the_machinery_book","tutorials"]
 #command = "python ../autogenerete_doc_links.py"
+
+[preprocessor.auto_include]
+renderer = ["html"]
+folder = "../"
+books = ["the_machinery_book","tutorials"]
+command = "python ../auto_include.py"
+
+
+[preprocessor.tera]
+command = "mdbook-tera  --toml  ./context.toml"
+
+[output.linkcheck]
+follow-web-links = false
+exclude = [ 'https://ourmachinery\.com/apidoc/','mailto:ping@ourmachinery\.com','https://marketplace\.visualstudio\.com'  ]
