--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,11 +13,11 @@ jobs:
         uses: actions/checkout@v2
         with:
           path: ./
-      - name: Checkout tmbuild-action repo
+      - name: Checkout themachinery-book-code-snippets repo
         uses: actions/checkout@v2
         with:
           path: samples
-          repository: OurMachinery/themachinery-book-code-snippets
+          repository: themachinery-book-code-snippets
       - name: Cache mdbook-tera
         id: cache-mdbook-tera
         uses: actions/cache@v2
