corrected  TM_BOOK_CODE_SNIPPETS

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     env:
-      TM_BOOK_CODE_SNIPPETS: ${{github.workspace}}/samples
+      TM_BOOK_CODE_SNIPPETS: ${{github.workspace}}/samples/examples
     steps:
       - name: Checkout website
         uses: actions/checkout@v2
