--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,9 +23,9 @@ jobs:
       - name: download SDK
         run: |
           sudo apt install -y unzip wget
-          wget https://ourmachinery.com/releases/2022.1/the-machinery-2022.1.a-linux.zip
+          wget https://ourmachinery.com/releases/2022.2/the-machinery-2022.2-linux.zip
           mkdir sdk_dir
-          unzip the-machinery-2022.1.a-linux.zip -d sdk_dir
+          unzip the-machinery-2022.2-linux.zip -d sdk_dir
       - name: Setup tmbook
         run: |
           wget https://github.com/simon-ourmachinery/tmbook/releases/download/latest/tmbook
@@ -33,31 +33,14 @@ jobs:
       - name: download css and js dependencies
         run: |
           mkdir public
-          cp index.html public/index.html
           cp CNAME public/CNAME
           cd public
-          mkdir css
-          cd css
-          wget https://ourmachinery.com/css/bootstrap.min.css
-          wget https://ourmachinery.com/css/style.min.css
-          cd ..
-          mkdir js
-          cd js
-          wget https://ourmachinery.com/js/bootstrap.bundle.min.js
-          wget https://ourmachinery.com/js/page.min.js
-      - name: Build the_machinery_book
+      - name: Build book
         run: |
-          cd the_machinery_book
           sed -i "s/#//" book.toml
           ../tmbook build
-          echo "move data from book to ../public/the_machinery_book"
-          mv -v book/ ../public/the_machinery_book
-      - name: Build tutorials
-        run: |
-          cd tutorials
-          sed -i "s/#//" book.toml
-          ../tmbook build
-          mv -v book/ ../public/tutorials
+          echo "move data from book to ../public/"
+          mv -v book/ ../public/
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
