--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Build book
         run: |
           sed -i "s/#//" book.toml
-          ../tmbook build
+          ./tmbook build
           echo "move data from book to ../public/"
           mv -v book/ ../public/
       - name: Deploy
