changed toc generation
toc

--- a/book.toml
+++ b/book.toml
@@ -14,7 +14,7 @@ enable = true
 [preprocessor.toc]
 command = "tmbook toc"
 renderer = ["html"]
-marker = "* auto-gen TOC;\n{:toc}"
+marker = "* {:toc}"
 
 [preprocessor.links]
 
