--- a/book.toml
+++ b/book.toml
@@ -12,7 +12,7 @@ git-repository-url = "https://github.com/OurMachinery/themachinery-books"
 enable = true
 
 [preprocessor.toc]
-command = "tmbook toc"
+command = "./tmbook toc"
 renderer = ["html"]
 marker = "* {:toc}"
 
